test/sema/c-enum.delta
// RUN: not %delta -typecheck -Iinputs %s | %FileCheck %s

import "c-enum.h";

func main() {
    let u: uint = FOO;

    // TODO: Auto-convert the constant integer to int here.
    // CHECK: [[@LINE+1]]:18: error: cannot initialize variable of type 'int' with 'uint'
    let i: int = FOO;
}
